test/classes/figueroa/DestructorSubclassing2.good
DestructorSubclassing2.chpl:11: syntax error: only single inheritance is supported
